<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="black">#000000</color>

    <string name="app_name">GreatBuyz</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="upgrade">Update</string>
    <string name="expirydate">Expires on:</string>
    <string name="expirytime">Offer Expires</string>
    <string name="expirydatetimeseperator"> to </string>
    <string name="expirydatetimeheading">Offer Expires</string>
    <string name="btnVisitText">Buy</string>
    <string name="btnVisitCoupon">Shop Now</string>
    <string name="btnGiftAFriend">GIFT A FRIEND</string>
    <string name="btnReadMore">Read More  ></string>
    <string name="titleInfo">Information</string>
    <string name="btnNotifVisitText">Visit</string>
    <string name="all">All</string>
    <string name="date">date:</string>

    <!-- Menu names -->
    <string name="menuAbout">About</string>
    <string name="menuHelp">Help</string>
    <string name="menuTerms">T\u0026C / Info\u0026Costi</string>
    <string name="menuFAQ">Faq</string>
    <string name="menuSettings">Configure</string>
    <string name="menuRefresh">Refresh</string>
    <string name="menuHedding">Settings</string>
    <string name="menuInfo">About</string>

    <!-- TAB names -->
    <!-- <string name="resStrSpecial">Exclusive Deals</string> -->
    <string name="dealsOfTheDay">Exclusive</string>
    <string name="topDeals">TOP</string>
    <string name="surpriseMe">Surprise</string>
    <string name="dealsByCategories">Categories</string>
    <string name="dealsYouMayLike">dealsYouMayLike</string>
    <string name="dealsNearMe">NEAR ME</string>
    <string name="exploreDeals">Search</string>
    <string name="exploreCoupons">Coupons</string>
    <string name="exploreDealsResult">Deals</string>
    <string name="myDeals">My Deals</string>
    <string name="searchDeals">DEALS</string>
    <string name="searchCOUPONS">COUPONS</string>
    <string name="searchNew">NEW SEARCH</string>
    

    <!-- Deal item -->
    <string name="value">VALUE</string>
    <string name="euro">Rs.</string>
    <string name="discount">DISC</string>
    <string name="percent">%</string>
    <string name="pay">PAY</string>
    <string name="contactDetailHeaderText">Contact:</string>
    <string name="offerHeaderText">offer:</string>
    <string name="zeroDiscountText">0</string>

    <!-- Messages -->
    <string name="unableToConnect">Unable to connect to server. Please try later.</string>
    <string name="checkInternetConnection">Please check your internet connection.</string>
    <string name="loading">Loading..</string>
    <string name="searching_best_deals">Looking for best deals for you</string>
    <string name="emptyDeal">No deals found</string>
    <string name="networkProblemMessage">Can not connect to server at this time, please try later.</string>
    <string name="emptyMyDealListMessage">No Deals purchased,please browse and buy exciting deals.</string>
    <string name="emptyMyCouponListMessage">No Coupons found</string>
    <string name="emptyViewBackButton">Use the "Back" button on your phone to return to the previous page.</string>
    <string name="NullKeywordMessage">Please enter keyword for search</string>
    <string name="NullFieldMessage">Required field missing</string>
    <string name="exitMessage">Are you really sure you want to exit?</string>
    <string name="NoApplicationFound">Your request can not be completed.</string>

    <!-- Help screen -->
    <string name="termsTitle">Terms and Conditions</string>
    <string name="faqTitle">FAQ</string>

    <!-- Explore deals -->
    <string name="titleSearchText">Explore Deals and Coupons</string>
    <string name="btnSearchText">Search</string>
    <string name="localityHintText">Your Location</string>
    <string name="keywordHintText">Search with keyword..</string>
    <string name="failed_search_dialog_message">No results, try searching again</string>

    <!-- Surprise Me -->
    <string name="btnSurpriseMeText">Click here</string>
    <string name="txtSurpriseMeText">Shake the phone to receive offers according to your favorite categories.</string>
    <string name="txtOR">oppure</string>

    <!-- MyDeals -->
    <string name="couponid">Coupon: </string>
    <string name="issued">Date of receipt: </string>

    <!-- Setting Items -->
    <string name="buttonUpdateText">Update</string>
    <string name="settingItemChangeLocation">Change City\"</string>
    <string name="settingItemPersonalProfile">Personal Profile</string>
    <string name="settingItemMyCoupon">My Deals</string>
    <string name="settingItemSearch">Search</string>
    <string name="settingItemNotifications">Notifications</string>
    <string name="settingItemCategoryPreferences">Choose Category</string>
    <string name="settingItemEmail">Email</string>
    <string name="settingItemUnsubscribe">Deactivate</string>
    <string name="settingItemKeywords">Please enter keywords to set daily alerts (eg: Pizza)</string>
    <string name="settingItemKeywordsTitle">Set Daily Alert</string>
    <string name="settingItemKeywordsButtonText">Set Alert</string>
    
    <string name="version">Version:</string>
    <string name="titleCategoryPreferences">Choose Category</string>
    <string name="titleUnsubscribeMessage">If you disable the service , you can not get it \ " see the offers</string>
    <string name="invalidEmailMessage">email not valid</string>
    <string name="atleastOneCategoryMessage">select at least one category</string>
    <string name="emailTextHint">example@mail.com</string>
    <string name="keywordsTextHint">Shoes, Nike ... </string>
    <string name="btnSetAlertsText">Update</string>
    <string name="emailTextPromo">Note : Add your email today and begin to receive the newsletter with all the best deals dedicated to you ..</string>
    <string name="keywordsSentMessage">The word you entered and \ " was sent to the server</string>
    <string name="keywordsFailedMessage">Invio parola fallito, riprova piu\" tardi</string>
    <!-- <string name="notificationText">Non perdere le migliori Offerte esclusive di TIM Coupon. Scegli quante Notifiche vuoi ricevere ogni giorno e clicca sul tasto Aggiorna</string> -->
    <string name="notificationSentMessage">Notification Preferences updated</string>
    <string name="notificationFailedMessage">Impossibile aggiornare le preferenze di notifica, si prega di riprovare</string>

    <!-- Deals near me -->
    <string name="gpsNeededMessage">TIM Coupon vuole condividere la tua città. Abilitiamo il GPS?</string>
    <string name="enable">Attivo</string>
    <string name="locationNotAvailable">Ci sono problemi nell\"individuare la tua esatta posizione. Potresti riprovare piuì tardi? Grazie</string>

    <!-- Registraion screen -->
    <string name="countryCode">+91</string>
    <string name="register">Register</string>
    <string name="validate">Validate</string>
    <string name="registrationFailMessage">Your registration is not successful. Please try again later.</string>
    <string name="otpExpiredMessage">This PIN is expired. Click on \"Resend PIN\" to get a new one</string>
    <string name="agree">Agree</string>
    <string name="enterMobileNumber">Enter your mobile number</string>
    <string name="invalidMobileNumber">Your phone number must be at least 6 characters</string>
    <string name="enterOTP">Enter the PIN you received</string>
    <string name="otpResendText">If you did not receive PIN</string>
    <string name="otpResendButtonText">Resend PIN</string>
    <string name="otpResendButtonInfoText">PIN Sent.</string>
    <string name="registerMobileNumber">Thank you for interest in GreatBuyz!! \n Now Browse thousands of offers/ coupons \n from your favorite App!!</string>
    <string name="welcomeText">For this week, you can access thousands of free offers for your city</string>
<string name="welcomeTextDis">Welcome back! Please register to proceed</string>
    <string name="welcomeOfferText">Service subscription at 0,98 per week</string>
    <string name="welcomeDealContinueButtonText">Continue</string>
    <string name="welcomeText_DiscontinuedUser">Welcome back.</string>
    <string name="subscription_status_pending_message">Your activation is not complete. Please try later</string>
    <string name="unsubscription_status_pending">Stiamo vivendo un problema di connettività, per favore cerchiamo di disattivare tardi</string>
    <string name="subscription_failed_message">Sending your PIN to the server has failed, please try again.</string>
    <string name="incorrectOTP">The PIN that you have inserted is not correct. Please try again.</string>
    <string name="freeDealMessage">Congratulations! You have received a Special welcome! \n Click to proceed with the Welcome Offer.</string>
    <string name="txtTnCAndInfo">T\u0026C </string>

    <!-- Notification Screen -->
    <string name="enable_inApp_notif">Enable Notifications</string>
    <string name="daily_notif_limit"> Daily Notification Limit</string>
    <string name="enable_all_notif">Enable All notification</string>
    <string name="enable_daily_msg">Enable Daily SMS</string>
    <string name="notMoreThan">Not more than</string>
    <string name="hour_notif">/hour</string>
    <string name="action_settings">Settings</string>

    <!-- IP change screen -->
    <string name="current_ip">Current IP</string>
    <string name="new_ip">New IP</string>
    <string name="cancel_en">Cancel</string>
    <string name="submit_en">Submit</string>

<!-- Payment screen -->
<string name="BuyConfirmationMessage">Are you sure, you want to proceed?</string>
<string name="LeavePaymentPage">Payment is in progress; do you still want to leave the page?</string>
<string name="PaymentSuccessMessage">Thanks for payment. Voucher will be sent to you shortly in a SMS and Email.</string>
<string name="PaymentFailedMessage">Transaction Failed. Please try again.</string>
<string name="PaymentUnknownMessage">Transaction status is unknown.</string>

<!-- GiftFriendScreen -->
<string name="InvalidMobMessage">The number added is not correct. Please input friend’s mobile number once again.</string>
    
</resources>
