<?xml version="1.0" encoding="utf-8"?>
<!--
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/surprice_me_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="5dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:scaleType="fitXY" >

    <ImageView
        android:id="@+id/img_magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/surprice_me_box" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/img_shake"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitXY"
            android:src="@drawable/shake" />

        <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
            android:id="@+id/txt_promoText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:text="@string/txtSurpriseMeText"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
        android:id="@+id/txt_or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:text="@string/txtOR"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnClickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="@drawable/normal_btn"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/btnSurpriseMeText"
        android:textColor="#ffffff"
        android:textSize="@dimen/white_color_text_size"
        android:textStyle="bold" />

    <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
        android:id="@+id/txt_failed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/unableToConnect"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>
<!-- </ScrollView> -->
