<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ebebeb" >

    <View
        android:id="@+id/borderlineBlackTop"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/couponstab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/borderlineBlackTop"
        android:background="#c84d5f"
        android:orientation="horizontal"
        android:weightSum="0" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                android:id="@+id/dealsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="6dip"
                android:background="@anim/border_bottom"
                android:gravity="center"
                android:text="@string/searchDeals"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/borderdeal"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                android:id="@+id/couponsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="6dip"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/searchCOUPONS"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/bordercoupon"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                android:id="@+id/coupondealsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="6dip"
                android:drawablePadding="5dip"
                android:drawableRight="@drawable/search_new"
                android:gravity="center"
                android:text="@string/searchNew"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/bordersearch"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:background="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/borderline"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_below="@+id/couponstab"
        android:layout_marginTop="-1dip"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <com.turacomobile.greatbuyz.ui.AmazingListView
        android:id="@+id/lsComposer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/couponstab"
        android:background="#ebebeb"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dip"
        android:listSelector="@android:color/transparent"
        android:scrollingCache="false" />

    <ViewSwitcher
        android:id="@+id/gpsNeededViewSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ViewSwitcher
            android:id="@id/android:empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ProgressBar
                    android:id="@+id/emptyProgress"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                    android:id="@+id/emptyText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/emptyDeal"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                    android:id="@+id/emptyBackButtonText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emptyText"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:text="@string/emptyViewBackButton"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:visibility="gone" />
            </RelativeLayout>
        </ViewSwitcher>

        <RelativeLayout
            android:id="@+id/gpsNeededView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

            <com.turacomobile.greatbuyz.utils.GreatBuyzTextView
                android:id="@+id/gpsNeededTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:text="@string/gpsNeededMessage"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEnableGPS"
                android:layout_width="wrap_content"
                android:layout_height="35dip"
                android:layout_below="@+id/gpsNeededTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dip"
                android:background="@drawable/normal_btn"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/enable"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" >
            </Button>
        </RelativeLayout>
    </ViewSwitcher>

</RelativeLayout>